@@ -19,6 +19,12 @@ use strict;
 
 use vars qw/$model/;
 
+# workaround Augeas locale bug
+if ($ENV{LC_ALL} ne 'C' or $ENV{LANG} ne 'C') {
+  $ENV{LC_ALL} = $ENV{LANG} = 'C';
+  exec("perl $0 @ARGV");
+}
+
 $model = Config::Model -> new (legacy => 'ignore',) ;
 
 my $trace = shift || 0;
