@@ -1,3 +1,8 @@
+2009-01-28  Dominique Dumont  <dominique.dumont@hp.com> v0.105
+
+	* t/augeas*.t: Sometimes the Augeas locale bug workaround also
+	needs LC_ALL=C.
+
 2009-01-27  Dominique Dumont  <dominique.dumont@hp.com> v0.104
 
 	* lib/Config/Model/Backend/Augeas.pm (write): Do no create
